--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,15 @@ body{
 .container-centre{
     max-width: 600px;
     margin: auto;
+    text-align: center;
 }
 
 .link{
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
+
+
 
 .link-primary{
     border-radius: 0.5rem;
@@ -32,15 +35,19 @@ body{
 }
 
 .link-secondary{
-    color: var(--primary-colour);
-    border-radius: 1rem;
-    border:1px solid var(--primary-colour);
-}
+    
+    border-color:#075985 ;
+    border: solid  4px;
+     text-decoration: none;
+    padding: 0.5rem;
+    border-radius: 1px;
 
+
+
+}
 .link-third{
     color: var(--primary-colour);
-    text-decoration: none;
-}
+    text-decoration: none;}
 
     
 .non-blluet-lists{
@@ -78,7 +85,16 @@ body{
     font-weight: bolder;
 }
 
+.hero .pro-img{
+    padding: 1rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 .hero .hero-img{
+    border-radius: 30%;
     padding: 2rem;
     width: 350px;
     display: block;
@@ -86,12 +102,14 @@ body{
 }
 
 .hero .hero-heading{
-    padding: 1rem;
-    color: burlywood;
-    text-align:center
+    padding: 0.5rem;
+    color: darksalmon;
+    text-align:center;
    }
+
 .hero .head-title{
   color: var(--primary-colour);  
+  text-align: center;
 }
 
 .section{
@@ -118,6 +136,20 @@ body{
     color: white;
 }
 
+.blog-showcase{
+    max-width: 700px;
+    text-align:center;
+    margin: auto;
+    padding: 0rem 1rem 0rem 0rem;
+}
+
+.section .link-blog{
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    color: white;
+    background-color: var(--primary-colour);
+}
 
 
 
