--- a/styles.css
+++ b/styles.css
@@ -97,20 +97,31 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 20%;
+    height: 13em;
+}
+
+.hero .blog-img{
+    padding: 1rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 30%;
     border-radius: 50%;
 }
 
+
+
 .hero .hero-img{
     border-radius: 30%;
-    padding: 2rem;
-    width: 350px;
+    padding: 1rem;
+    width: 300px;
     display: block;
     margin: auto;
 }
 
 .hero .hero-heading{
-    padding: 0.5rem;
+    padding: 0.1rem;
     color: darksalmon;
     text-align:center;
    }
