--- a/styles.css
+++ b/styles.css
@@ -104,13 +104,18 @@ body{
 }
 
 
+.container .images{
+    display: flex;
+    align-items: center;
+}
+
 .hero .hero-img{
     height: 15rem;
     padding: 1rem;
-    width: 350px;
     display: block;
-    margin-left: 23rem;
     border-radius: 10%;
+    margin-left: auto;
+    margin-right: auto;
 } 
 
 
