--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 20%;
+    width: auto;
     height: 13em;
 }
 
